alterando a senha do postgres

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=cardapio
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/food
 spring.datasource.username=joaolucas
-spring.datasource.password=password
+spring.datasource.password=051123
