--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.application.name=cardapio
 spring.datasource.url=jdbc:postgresql://localhost:5432/food
 spring.datasource.username=joaolucas
 spring.datasource.password=051123
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
